--- a/e_m_adventures/src/components/miniComponents/Backdrop/Backdrop.module.css
+++ b/e_m_adventures/src/components/miniComponents/Backdrop/Backdrop.module.css
@@ -1,5 +1,6 @@
 .backdrop {
   background-color: var(--main-color-black);
+  border: 2px solid var(--main-color-gold);
   position: fixed;
   padding: 10rem;
   top: 50%;
