--- a/e_m_adventures/src/App.css
+++ b/e_m_adventures/src/App.css
@@ -9,9 +9,8 @@ html {
   box-sizing: border-box;
   font-size: 62.5%;
   height: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+
+  font-family: 'Open Sans', sans-serif;
 }
 
 *,
