--- a/e_m_adventures/src/components/Header/HeaderSearch/SearchPopUP/SearchPopUp.module.css
+++ b/e_m_adventures/src/components/Header/HeaderSearch/SearchPopUP/SearchPopUp.module.css
@@ -1,23 +1,12 @@
 .searchPopUp {
   position: fixed;
-  height: 100rem;
+  height: 100vh;
   width: 100%;
   /* top: 5rem; */
   /* margin: 0 auto; */
   background-color: var(--main-color-black);
   z-index: 1000;
   padding: 11rem 2rem;
-}
-
-.btnClose {
-  border-radius: 50rem;
-  background-color: red;
-  width: 10rem;
-  height: 10rem;
-  border: 2px solid var(--main-color-black);
-  position: absolute;
-  left: 86%;
-  top: 1%;
 }
 
 .searchForm {
