--- a/e_m_adventures/src/components/Accommodation/AccommodationContent/AccommodationContent.module.css
+++ b/e_m_adventures/src/components/Accommodation/AccommodationContent/AccommodationContent.module.css
@@ -6,7 +6,9 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-auto-rows: max-content;
-  width: 70%;
+  min-width: 70%;
+  max-width: 130rem;
+
   margin: 5rem auto;
 }
 
@@ -26,7 +28,7 @@
   border: var(--b-2-gold);
   border-radius: 2rem;
   cursor: pointer;
-
+  padding: 0.5rem;
   display: grid;
   grid-template-rows: repeat(3, max-content);
   grid-template-columns: 2fr 1fr;
