--- a/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AccommodationInformationContent.module.css
+++ b/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AccommodationInformationContent.module.css
@@ -25,7 +25,11 @@ main {
 
 .main h2 {
   font-size: 3rem;
-  margin: 0 0 1rem 0;
+  margin: 0 0 2rem 0;
+}
+
+.main h3 {
+  font-size: 2.5rem;
 }
 
 .bold {
@@ -44,6 +48,18 @@ main {
   border-radius: 50%;
   vertical-align: middle;
 }
+
+.infoHeadingContainer,
+.accommodationFeatures,
+.longDescription,
+.sleep,
+.locationFeatures {
+  width: 70%;
+  padding: 1rem 0 3rem 0;
+  border-bottom: var(--grey-border-1px);
+  margin-bottom: 2rem;
+}
+
 /* HEADING SECTION */
 
 .sectionHeading {
@@ -123,16 +139,6 @@ main {
 }
 
 /* ACCOMMODATION INFORMATION SECTION */
-.infoHeadingContainer,
-.accommodationFeatures,
-.longDescription,
-.sleep,
-.locationFeatures {
-  width: 70%;
-  padding: 1rem 0 3rem 0;
-  border-bottom: var(--grey-border-1px);
-  margin-bottom: 2rem;
-}
 
 .infoHeadingContainer {
   display: flex;
@@ -229,7 +235,10 @@ main {
 }
 
 /* REVIEW SECTION */
-.sectionReviews {
+.sectionReviews,
+.sectionMap,
+.sectionAboutHosts,
+.sectionRules {
   border-bottom: var(--grey-border-1px);
   padding: 2rem 0;
 }
@@ -258,4 +267,34 @@ main {
 }
 .reviewCardContent {
   margin: 1rem 0;
+}
+
+/* MAP SECTION */
+
+.sectionMap h3 {
+  margin: 1rem 0;
+  font-weight: bold;
+}
+
+.sectionMap p {
+  margin: 1rem 0;
+}
+
+/* ABOUT HOST SECTION */
+.aboutHostHeading {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.aboutHostHeading img {
+  width: 12rem;
+  height: 6rem;
+  margin-right: 2rem;
+}
+
+.aboutHostHeading h3 {
+  font-weight: bold;
+}
+.aboutHostHeading p {
+  color: var(--sec-color-grey);
 }
