--- a/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AccommodationInformationContent.module.css
+++ b/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AccommodationInformationContent.module.css
@@ -281,9 +281,15 @@ main {
 }
 
 /* ABOUT HOST SECTION */
+.sectionAboutHost {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
 .aboutHostHeading {
   display: flex;
   justify-content: flex-start;
+  grid-column: 1 / span 2;
 }
 
 .aboutHostHeading img {
@@ -297,4 +303,50 @@ main {
 }
 .aboutHostHeading p {
   color: var(--sec-color-grey);
+}
+.aboutHostContent {
+  grid-column: 1;
+}
+
+.aboutHostInfo {
+  /* margin-left: auto; */
+  grid-row: 2 / span 2;
+  grid-column: 2;
+  /* width: 50%; */
+  padding: 0 5rem;
+}
+
+.aboutHostInfo ul {
+  list-style: none;
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  /* width: max-content; */
+}
+
+.aboutHostInfo li:not(:last-child) {
+  margin-bottom: 1rem;
+}
+
+.aboutHostInfo button {
+  margin-bottom: 2rem;
+  background-color: white;
+  padding: 2rem;
+  border-radius: 2rem;
+  outline: none;
+  border: 2px solid grey;
+  cursor: pointer;
+}
+
+.aboutHostSecurity {
+  width: 70%;
+  display: flex;
+  align-items: center;
+}
+
+.aboutHostSecurity p {
+  font-size: 1rem;
+}
+
+.aboutHostSecurity ion-icon {
+  font-size: 8rem;
 }
