--- a/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AccommodationInformationContent.module.css
+++ b/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AccommodationInformationContent.module.css
@@ -388,7 +388,6 @@ main {
 
 .knowContent ul li {
   display: flex;
-  align-items: center;
 }
 
 .knowContent ul li:not(:last-child) {
@@ -398,10 +397,6 @@ main {
 .ionIconContainer {
   display: flex;
   justify-content: center;
-  align-items: center;
-}
-
-/* FOOTER SECTION */
-.accommInfoFooter {
-  background-color: var(--sec-color-grey);
+  /* align-items: center; */
+  margin-top: 3px;
 }
