fix ion-icon placement accommodationInformationContent

--- a/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AccommodationInformationContent.module.css
+++ b/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AccommodationInformationContent.module.css
@@ -369,7 +369,7 @@ main {
 /* KNOW SECTION */
 .knowContentContainer {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 .knowContent {
