--- a/e_m_adventures/src/components/Modal/AccommodationIformationModal/ShowMoreModal/ShowMoreModal.module.css
+++ b/e_m_adventures/src/components/Modal/AccommodationIformationModal/ShowMoreModal/ShowMoreModal.module.css
@@ -1,14 +1,16 @@
 .showMoreModal {
-  height: 20rem;
-  width: 20rem;
-  background-color: hotpink;
+  height: max-content;
+  width: 35%;
+  background-color: var(--sec-color-grey-light);
   position: fixed;
   left: 50%;
-  top: 20%;
+  top: 50%;
   /* transform: translateX(50%); */
   transform: translate(-50%, -50%);
   z-index: 1000;
   animation: slideIn 0.5s;
+  border-radius: 2rem;
+  border: 1px solid var(--main-color-gold);
 }
 
 @keyframes slideIn {
@@ -16,6 +18,6 @@
     top: 150%;
   }
   100% {
-    top: 20%;
+    top: 50%;
   }
 }
