--- a/e_m_adventures/src/components/Modal/AccommodationIformationModal/ShowMoreModal/ShowMoreModal.module.css
+++ b/e_m_adventures/src/components/Modal/AccommodationIformationModal/ShowMoreModal/ShowMoreModal.module.css
@@ -1,16 +1,39 @@
-.showMoreModal {
+.showMoreModalBg {
+  position: fixed;
+  z-index: 100;
+  background-color: rgba(72, 72, 77, 0.5);
+  height: 100%;
+  width: 100%;
+  /* opacity: 0.5; */
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.showMoreModalContent {
   height: max-content;
   width: 35%;
-  background-color: var(--sec-color-grey-light);
+  background-color: var(--main-color-gold);
   position: fixed;
   left: 50%;
   top: 50%;
-  /* transform: translateX(50%); */
   transform: translate(-50%, -50%);
   z-index: 1000;
   animation: slideIn 0.5s;
   border-radius: 2rem;
   border: 1px solid var(--main-color-gold);
+  padding: 3rem;
+}
+
+.closeBtn {
+  background-color: inherit;
+  border-radius: 50%;
+  border: none;
+  font-size: 3rem;
+}
+
+.closeBtn:hover {
+  background-color: var(--sec-color-grey-light);
 }
 
 @keyframes slideIn {
