add mapModal for accommodationInfo

--- a/e_m_adventures/src/components/Modal/AccommodationIformationModal/AccommodationInformationModal.module.css
+++ b/e_m_adventures/src/components/Modal/AccommodationIformationModal/AccommodationInformationModal.module.css
@@ -10,7 +10,8 @@
 }
 
 .accomInfoModalContent {
-  width: 35%;
+  height: max-content;
+  width: max-content;
   background-color: var(--main-color-gold);
   position: fixed;
   left: 50%;
