--- a/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AccommodationInformationContent.module.css
+++ b/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AccommodationInformationContent.module.css
@@ -284,6 +284,10 @@ main {
   margin: 1rem 0;
 }
 
+.mapBoxContainer {
+  height: 40rem;
+}
+
 /* ABOUT HOST SECTION */
 .sectionAboutHost {
   display: grid;
