--- a/e_m_adventures/src/components/Modal/AccommodationIformationModal/AccommodationInformationModal.module.css
+++ b/e_m_adventures/src/components/Modal/AccommodationIformationModal/AccommodationInformationModal.module.css
@@ -11,7 +11,8 @@
 
 .accomInfoModalContent {
   height: max-content;
-  width: max-content;
+  min-width: 60rem;
+  max-width: max-content;
   background-color: var(--main-color-gold);
   position: fixed;
   left: 50%;
