--- a/e_m_adventures/src/components/Modal/AccommodationInformationModal/AccommodationInformationModalImage/ModalImageGrid/ModalImageGrid.module.css
+++ b/e_m_adventures/src/components/Modal/AccommodationInformationModal/AccommodationInformationModalImage/ModalImageGrid/ModalImageGrid.module.css
@@ -5,11 +5,15 @@
 
   grid-template-columns: 1fr 1fr;
   grid-auto-rows: max-content;
-  gap: 1em;
+  gap: 1rem;
+  background-color: black;
+  box-shadow: 0px 0px 0px 8px black, 0px 0px 0px 10px var(--main-color-gold),
+    0px 0px 0px 15px black;
 }
 
 .imgGrid img {
   width: 100%;
+  border-radius: 2rem;
 }
 
 .big {
