start modal image carousel

--- a/e_m_adventures/src/components/Modal/AccommodationInformationModal/AccommodationInformationModalImage/AccommodationInformationModalImage.module.css
+++ b/e_m_adventures/src/components/Modal/AccommodationInformationModal/AccommodationInformationModalImage/AccommodationInformationModalImage.module.css
@@ -23,6 +23,10 @@
   top: 0;
 }
 
+.modalImageCard img {
+  border: 3px solid var(--main-color-gold);
+}
+
 .modalImageNav {
   display: flex;
   margin-bottom: 4rem;
