replace map, know , host  section in AccommodationInformationContent

--- a/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AICSections/SectionInformation/SectionInformation.module.css
+++ b/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AICSections/SectionInformation/SectionInformation.module.css
@@ -25,6 +25,14 @@
   border-radius: 50%;
   vertical-align: middle;
 }
+
+.showModal {
+  text-decoration: underline;
+  font-weight: bold;
+  color: var(--main-color-gold);
+  cursor: pointer;
+}
+
 .infoHeadingContainer {
   display: flex;
 
