add search card to accommodationInformation and add grid

--- a/e_m_adventures/src/App.css
+++ b/e_m_adventures/src/App.css
@@ -123,6 +123,10 @@ p {
   text-transform: uppercase;
 }
 
+[data-underlinefont] {
+  text-decoration: underline;
+}
+
 @media (max-width: 975px) {
   html {
     font-size: 55%;
