--- a/e_m_adventures/src/components/DatePicker/DatePicker.module.css
+++ b/e_m_adventures/src/components/DatePicker/DatePicker.module.css
@@ -10,56 +10,85 @@
     'd29 d30 d31 d32 d33 d34 d35'
     'd36 d37 d38 d39 d40 d41 d42';
 
-  /* grid-template-areas:
-    'hd hd hd hd   hd   hd   hd   hd   hd'
-    'sd sd sd main main main main main main'
-    'sd sd sd  ft  ft   ft   ft   ft   ft'; */
   grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(8, 1fr);
-  background-color: khaki;
-}
+  grid-template-rows: repeat(8, max-content);
 
-.leftCardContainer,
-.rightCardContainer {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(7, 1fr);
-  background-color: black;
-  gap: 1rem;
-  padding: 1rem;
-
-  /* width: 50%; */
+  padding: 3rem;
+  border: 2px solid var(--main-color-gold);
+  border-radius: 3rem;
+  width: 100%;
+  height: 100%;
 }
 
 .displayMonth {
-  grid-area: month;
-  color: hotpink;
-  justify-self: center;
-}
-
-.rightCardContainer {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  background-color: greenyellow;
-  /* width: 50%; */
+  width: 100%;
+  text-align: center;
+  font-size: 2rem;
+  text-transform: capitalize;
 }
 
 .dayCard {
-  /* background-color: hotpink; */
-  width: 1fr;
-  display: inline-block;
-  color: black !important;
-  background-color: blueviolet;
+  margin: 1rem 0;
+
+  text-align: center;
+  border-radius: 100%;
+  margin: 0.5rem;
+  padding: 1rem;
+  border: 2px solid white;
+  transition: all 0.5s;
+}
+
+.dayCard:hover {
+  border-color: var(--main-color-gold);
 }
 
 .dayCard p {
   color: black;
+  font-weight: bold;
 }
 
 .datePicker {
   width: 100%;
-  height: 100vh;
+  padding: 2rem;
+  border: 2px solid var(--main-color-gold);
+  border-radius: 3rem;
+  margin-top: 2rem;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  background-color: black;
+  grid-template-columns: repeat(2, max-content);
+  gap: 2rem;
+}
+
+.testContainer {
+  width: max-content;
+  margin: 0 auto;
+}
+.dayName {
+  font-size: 1.5rem;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.changeMonthBtn {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 100%;
+  background-color: inherit;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.5s;
+}
+
+.changeMonthBtn:hover {
+  background-color: var(--main-color-gold);
+  opacity: 0.9;
+}
+
+.cardGridHeader {
+  display: flex;
+
+  align-items: center;
+  grid-area: month;
+  margin-bottom: 2rem;
 }
