start new search bar

--- a/e_m_adventures/src/Variables.css
+++ b/e_m_adventures/src/Variables.css
@@ -5,6 +5,7 @@
   --main-color-gold: #b08f26;
 
   /* SECONDARY COLOR VARIABLES */
+  --sec-color-grey-vlight: #dad5d5;
   --sec-color-grey-light: #999999;
   --sec-color-grey: #212121;
   /* BORDER VARIABLES */
