add comment and change var name in utilities getFullDays. Add selected date state and selected date  visualisation to date picker

--- a/e_m_adventures/src/components/DatePicker/DatePicker.module.css
+++ b/e_m_adventures/src/components/DatePicker/DatePicker.module.css
@@ -94,11 +94,20 @@
   margin-bottom: 2rem;
 }
 
-.checkIn {
+.checkInCheckOut {
   background-color: black;
   border: 2px solid var(--main-color-gold);
 }
 
-.checkIn p {
+.checkInCheckOut p {
   color: var(--main-color-gold);
+}
+
+.fullDay {
+  background-color: var(--main-color-gold);
+  border: 2px solid black;
+}
+
+.fullDay p {
+  color: black;
 }
