--- a/e_m_adventures/src/components/NewSearch/HeaderSearchGuests/HeaderSearchGuests.module.css
+++ b/e_m_adventures/src/components/NewSearch/HeaderSearchGuests/HeaderSearchGuests.module.css
@@ -1,7 +1,46 @@
 .headerSearchGuests {
-  background-color: hotpink;
+  width: 40%;
+  border-radius: 3rem;
+  border: 2px solid var(--main-color-gold);
+  margin: 2rem auto;
 }
 
 .headerSearchGuests p {
   color: black;
+}
+
+.guestCard {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* background-color: hotpink; */
+  margin: 1rem auto;
+  padding: 1rem 5rem;
+  border: 2px solid var(--main-color-gold);
+}
+
+.guestType {
+  flex-basis: 65%;
+}
+
+.counterContainer {
+  flex-basis: 35%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.btnCounter {
+  flex-basis: 30%;
+  height: max-content;
+  font-size: 3rem;
+  border-radius: 50%;
+  /* background-color: var(--sec-color-grey-light); */
+  border: 2px solid var(--sec-color-grey-light);
+}
+
+.btnCounter:hover,
+.btnCounter:focus {
+  border: 2px solid var(--main-color-gold);
 }
