--- a/e_m_adventures/src/components/NewSearch/HeaderSearchAccommodation/HeaderSearchAccommodation.module.css
+++ b/e_m_adventures/src/components/NewSearch/HeaderSearchAccommodation/HeaderSearchAccommodation.module.css
@@ -34,6 +34,11 @@
   align-items: center;
   justify-content: space-evenly;
   text-transform: capitalize;
+  cursor: pointer;
+}
+
+.accommodationCard:hover {
+  background-color: var(--sec-color-grey-vlight);
 }
 
 .accommodationCard p {
