--- a/e_m_adventures/src/components/NewSearch/HeaderSearch.module.css
+++ b/e_m_adventures/src/components/NewSearch/HeaderSearch.module.css
@@ -58,6 +58,10 @@
   margin-right: 1rem;
 }
 
+.submitBtn:disabled {
+  background-color: var(--sec-color-grey-light);
+}
+
 @media (max-width: 975px) {
 }
 
