--- a/e_m_adventures/src/components/NewSearch/HeaderSearch.module.css
+++ b/e_m_adventures/src/components/NewSearch/HeaderSearch.module.css
@@ -60,6 +60,7 @@
 
 .submitBtn:disabled {
   background-color: var(--sec-color-grey-light);
+  border: 2px solid red;
 }
 
 @media (max-width: 975px) {
