disable days before checkin date picker

--- a/e_m_adventures/src/components/NewSearch/DatePicker/DatePicker.module.css
+++ b/e_m_adventures/src/components/NewSearch/DatePicker/DatePicker.module.css
@@ -57,6 +57,12 @@
   cursor: pointer;
 }
 
+.dayCard[disabled] {
+  background-color: var(--sec-color-grey-light);
+  border: 2px solid var(--main-color-gold);
+  pointer-events: none;
+}
+
 .dayCard:hover {
   border-color: var(--main-color-gold);
 }
